[package]
name = "devit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
spinner = "0.5.0"
thiserror = "1.0.40"
ureq = { version = "2.6", features = ["json"] }

